boreal/tests/assets/invalid_files/compilation/expression_incompatible_types3.yar
// [error: expressions have invalid types]
rule a {
    condition:
        "a" * 1.2 == 3
}
